# simple_code_generator

./: .gitignore  .pre-commit-config.yaml  README.md  custom_llm_analysis.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: generator.py  pyproject.toml  server.py
src/templates/: index.html
tests/: test_server.py
