[tool.poetry]
name = "code-generation-web-interface"
version = "0.1.0"
description = "A web interface for code generation using FastAPI and Langchain"
authors = ["Tommy Gunawan <tomgun132@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.110.0"
Jinja2 = "3.1.3"
uvicorn = "0.27.1"
langchain = "0.1.11"
openai = "1.13.3"
python-multipart = ">=0.0.7"

[tool.poetry.group.test.dependencies]
pytest     = "^7.0.1"
pytest-cov = "^3.0.0"

[tool.poetry.group.sa.dependencies]
black      = "^22.3.0"
flake8     = "^4.0.1"
mypy       = "^1.9"

[tool.poetry.group.dev.dependencies]
pre-commit        = "^2.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length    = 119
target-version = ["py310"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]